--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: '3.8'
 services:
   web_holzwerk_meister:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/speedyunited/webseite-3:0.01
     ports:
       - "8080:80"
     depends_on:
@@ -13,9 +11,7 @@ services:
     restart: unless-stopped
 
   php:
-    build:
-      context: .
-      dockerfile: Dockerfile.php
+    image: ghcr.io/speedyunited/webseite-2-php:latest
     networks:
       - web
     restart: unless-stopped
