--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web_holzwerk_meister:
-    image: ghcr.io/speedyunited/webseite-3:0.0.3
+    image: ghcr.io/speedyunited/webseite-3:v0.1.0
     ports:
       - "8080:80"
     depends_on:
