--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web_holzwerk_meister:
-    image: ghcr.io/speedyunited/webseite-2:latest
+    image: ghcr.io/speedyunited/webseite-3:v0.1.0
     depends_on:
       - php
     networks:
