--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,16 +1,49 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
     root /usr/share/nginx/html;
     index index.php index.html;
-    resolver 127.0.0.11 valid=10s;
+
+    # ── Sicherheits-Header ───────────────────────────────────────────────
+    add_header X-Content-Type-Options  "nosniff"       always;
+    add_header X-Frame-Options         "SAMEORIGIN"    always;
+    add_header X-XSS-Protection        "1; mode=block" always;
+    add_header Referrer-Policy         "strict-origin-when-cross-origin" always;
+
+    # ── Gzip-Komprimierung ───────────────────────────────────────────────
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript
+               text/xml application/xml application/xml+rss text/javascript
+               image/svg+xml;
+    gzip_min_length 256;
+    gzip_vary on;
+
+    # ── Statische Dateien cachen ─────────────────────────────────────────
+    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff2?|ttf|eot)$ {
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # ── PHP / Routing ────────────────────────────────────────────────────
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
+        fastcgi_intercept_errors on;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_pass 127.0.0.1:9000;
+        # Kein Cache für PHP-Responses (wichtig für Entwicklung + Safari)
+        add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+    }
+
+    # ── Versteckte Dateien blockieren ────────────────────────────────────
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
 }
